--- a/Cstor/Cstor.csproj
+++ b/Cstor/Cstor.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Logging" Version="3.12.0" />
+  </ItemGroup>
 </Project>
